--- a/res/layout/activity_control.xml
+++ b/res/layout/activity_control.xml
@@ -24,6 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+       	android:layout_marginTop="@dimen/activity_elements_margin"
         android:orientation="horizontal" >
 
         <!-- Control density. -->
@@ -49,6 +50,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+       	android:layout_marginTop="@dimen/activity_elements_margin"
         android:text="@string/label_control_gap" />
 
     <!-- Sub layout for the control gap. -->
@@ -57,6 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+       	android:layout_marginTop="@dimen/activity_elements_margin"
         android:orientation="horizontal" >
 
         <!-- Control gap. -->
@@ -82,6 +85,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+       	android:layout_marginTop="@dimen/activity_elements_margin"
         android:text="@string/label_control_ranks" />
 
     <!-- Sub layout for the control ranks. -->
@@ -90,6 +94,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+       	android:layout_marginTop="@dimen/activity_elements_margin"
         android:orientation="horizontal" >
 
         <!-- Control ranks. -->
@@ -113,6 +118,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+       	android:layout_marginTop="@dimen/activity_elements_margin"
         android:text="@string/label_control_grains" />
 
     <!-- Sub layout for the control grains. -->
@@ -121,6 +127,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+       	android:layout_marginTop="@dimen/activity_elements_margin"
         android:orientation="horizontal" >
 
         <!-- Control grains. -->
