--- a/res/layout/activity_converter.xml
+++ b/res/layout/activity_converter.xml
@@ -24,6 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+       	android:layout_marginTop="@dimen/activity_elements_margin"
         android:orientation="horizontal" >
 
         <!-- Converter density. -->
@@ -49,6 +50,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+       	android:layout_marginTop="@dimen/activity_elements_margin"
         android:text="@string/label_converter_pmg" />
 
     <!-- Sub layout for the converter PMG. -->
@@ -57,6 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+       	android:layout_marginTop="@dimen/activity_elements_margin"
         android:orientation="horizontal" >
 
         <!-- PMG. -->
@@ -82,6 +85,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+       	android:layout_marginTop="@dimen/activity_elements_margin"
         android:text="@string/label_converter_weight" />
 
     <!-- Sub layout for the converter weight. -->
@@ -90,6 +94,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+       	android:layout_marginTop="@dimen/activity_elements_margin"
         android:orientation="horizontal" >
 
         <!-- Converter weight. -->
@@ -114,6 +119,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+       	android:layout_marginTop="@dimen/activity_elements_margin"
         android:orientation="horizontal" >
 
         <!-- Button to choice the parcel. -->
