--- a/res/layout/activity_info_parcel.xml
+++ b/res/layout/activity_info_parcel.xml
@@ -1,129 +1,206 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/activity_vertical_margin"
     android:layout_marginLeft="@dimen/activity_horizontal_margin"
     android:layout_marginRight="@dimen/activity_horizontal_margin"
-    android:layout_marginTop="@dimen/activity_vertical_margin"
-    android:gravity="center_horizontal"
-    android:orientation="vertical" >
+    android:layout_marginTop="@dimen/activity_vertical_margin" >
 
-    <!-- Details parcel layout. Display all informations about a parcel. -->
-
-
-    <!-- Name of the parcel. NOTE: move to action bar title ? -->
-
-    <TextView
-        android:id="@+id/tv_info_parcel_name"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="" />
+        android:gravity="center_horizontal"
+        android:orientation="vertical" >
 
-    <!-- Image of the parcel. -->
+        <!-- Details parcel layout. Display all informations about a parcel. -->
 
-    <ImageView
-        android:id="@+id/img_parcel_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/label_parcel_image"
-        android:src="@drawable/img_parcel_default" />
 
-    <!-- Sub layout for all parcel's informations. NOTE: move to grid layout. -->
-
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:columnCount="2" >
-
-        <!-- Label for the actual parcel culture. -->
+        <!-- Name of the parcel. NOTE: move to action bar title ? -->
 
         <TextView
+            android:id="@+id/tv_info_parcel_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/activity_elements_margin"
+            android:text=""
+            android:textSize="25sp" />
+
+        <!-- Image of the parcel. -->
+
+        <ImageView
+            android:id="@+id/img_parcel_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_elements_margin"
-            android:text="@string/label_parcel_actual_culture" />
+            android:contentDescription="@string/label_parcel_image"
+            android:src="@drawable/img_parcel_default" />
 
-        <!-- Actual parcel culture. -->
+        <!-- Sub layout for all parcel's informations. NOTE: move to grid layout. -->
+        <!-- Line culture. -->
 
-        <TextView
-            android:id="@+id/tv_info_culture_actual"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_elements_margin"
-            android:text="" />
+            android:orientation="horizontal" >
 
-        <!-- Label for the previous parcel culture. -->
+            <!-- Label for the actual parcel culture. -->
 
-        <TextView
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_elements_margin"
+                android:text="@string/label_parcel_actual_culture" />
+
+            <!-- Actual parcel culture. -->
+
+            <TextView
+                android:id="@+id/tv_info_culture_actual"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_elements_margin"
+                android:layout_marginTop="@dimen/activity_elements_margin"
+                android:layout_weight="1"
+                android:text="" />
+        </LinearLayout>
+        <!-- Line last culture. -->
+
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_elements_margin"
-            android:text="@string/label_parcel_previous_culture" />
+            android:orientation="horizontal" >
 
-        <!-- Previous parcel culture. -->
+            <!-- Label for the previous parcel culture. -->
 
-        <TextView
-            android:id="@+id/tv_info_culture_last"
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_elements_margin"
+                android:text="@string/label_parcel_previous_culture" />
+
+            <!-- Previous parcel culture. -->
+
+            <TextView
+                android:id="@+id/tv_info_culture_last"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" 
+                android:layout_marginLeft="@dimen/activity_elements_margin"
+                android:layout_marginTop="@dimen/activity_elements_margin"
+                android:layout_weight="1"
+                android:text="" />
+        </LinearLayout>
+        <!-- Line surface -->
+
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_elements_margin"
-            android:text="" />
+            android:orientation="horizontal" >
 
-        <!-- Row layout -->
+            <!-- Label for the parcel surface. -->
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_elements_margin"
+                android:text="@string/label_parcel_surface" />
 
-        <!-- Label for the parcel surface. -->
+            <!-- Parcel surface. -->
 
-        <TextView
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/tv_info_parcel_surface"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_elements_margin"
+                android:layout_marginTop="@dimen/activity_elements_margin"
+                android:layout_weight="1"
+                android:text="" />
+        </LinearLayout>
+        <!-- Line latitude. -->
+
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_elements_margin"
-            android:text="@string/label_parcel_surface" />
+            android:orientation="horizontal" >
 
-        <!-- Parcel surface. -->
+            <!-- Label for Parcel Latitude. -->
 
-        <TextView
-            android:id="@+id/tv_info_parcel_surface"
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_elements_margin"
+                android:text="@string/label_parcel_latitude" />
+
+            <!-- Parcel latitude. -->
+
+            <TextView
+                android:id="@+id/tv_info_parcel_latitude"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_elements_margin"
+                android:layout_marginTop="@dimen/activity_elements_margin"
+                android:layout_weight="1"
+                android:text="" />
+        </LinearLayout>
+        <!-- Line longitude. -->
+
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_elements_margin"
-            android:text="" />
+            android:orientation="horizontal" >
 
-        <!-- Label for Parcel Latitude. -->
+            <!-- Label for Parcel longitude. -->
 
-        <TextView
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_elements_margin"
+                android:text="@string/label_parcel_longitude" />
+
+            <!-- Parcel longitude. -->
+
+            <TextView
+                android:id="@+id/tv_info_parcel_longitude"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_elements_margin"
+                android:layout_marginTop="@dimen/activity_elements_margin"
+                android:layout_weight="1"
+                android:text="" />
+        </LinearLayout>
+        <!-- Line address. -->
+
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <!-- Label for Parcel Address. -->
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_elements_margin"
+                android:text="@string/label_parcel_address" />
+
+            <!-- Parcel Address. -->
+
+            <TextView
+                android:id="@+id/tv_info_parcel_address"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_elements_margin"
+                android:layout_marginTop="@dimen/activity_elements_margin"
+                android:layout_weight="1"
+                android:text="" />
+        </LinearLayout>
+        <!-- Maps button. -->
+
+        <Button
+            android:id="@+id/btn_maps_parcel"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/activity_elements_margin"
-            android:text="@string/label_parcel_latitude" />
+            android:text="@string/btn_show_pos" />
+    </LinearLayout>
 
-        <!-- Parcel latitude. -->
-
-        <TextView
-            android:id="@+id/tv_info_parcel_latitude"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_elements_margin"
-            android:text="" />
-
-        <!-- Label for Parcel longitude. -->
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_elements_margin"
-            android:text="@string/label_parcel_longitude" />
-
-        <!-- Parcel longitude. -->
-
-        <TextView
-            android:id="@+id/tv_info_parcel_longitude"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_elements_margin"
-            android:text="" />
-    </GridLayout>
-
-</LinearLayout>
+</ScrollView>
