--- a/res/layout/listview_item_row.xml
+++ b/res/layout/listview_item_row.xml
@@ -5,14 +5,16 @@
     android:orientation="horizontal" >
 
     <!-- Parcel Image -->
+
     <ImageView
         android:id="@+id/img_list_parcel"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:contentDescription="@string/img_list_parcel"
-        android:layout_weight="1" /> 
-        
+        android:layout_weight="1"
+        android:contentDescription="@string/img_list_parcel" />
+
     <!-- Parcel Infos -->
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,6 +22,7 @@
         android:orientation="vertical" >
 
         <!-- Parcel Name -->
+
         <TextView
             android:id="@+id/tv_list_name"
             android:layout_width="fill_parent"
@@ -31,6 +34,7 @@
             android:textStyle="bold" />
 
         <!-- Parcel Actual culture -->
+
         <TextView
             android:id="@+id/tv_list_culture"
             android:layout_width="fill_parent"
@@ -42,13 +46,14 @@
     </LinearLayout>
 
     <!-- Image arrow for infos -->
+
     <ImageView
         android:id="@+id/img_list_infos"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:contentDescription="@string/btn_list_info"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:contentDescription="@string/btn_list_info" />
 
 </LinearLayout>
